--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4.0.0"
 reqwest = "0.11.11"
+serde = { version = "1", features = ["derive"]}
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
