--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,16 @@ actix-web = "4.0.0"
 reqwest = "0.11.11"
 serde = { version = "1", features = ["derive"]}
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+openssl = { version = "0.10", features = ["vendored"] } # not from book, but trying to get running on new OS
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+	 "runtime-actix-rustls",
+	 "macros",
+	 "postgres",
+	 "uuid",
+	 "chrono",
+	 "migrate"
+]	 
