--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+config = "0.13"
 actix-web = "4.0.0"
 reqwest = "0.11.11"
 serde = { version = "1", features = ["derive"]}
