--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ reqwest = "0.11.11"
 serde = { version = "1", features = ["derive"]}
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 openssl = { version = "0.10", features = ["vendored"] } # not from book, but trying to get running on new OS
+uuid = { version = "1", features = ["v4"] }
+chrono = "0.4.15"
+
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.6"
