--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ log = "0.4.17"
 tracing = {version = "0.1", features = ["log"]}
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.6.0"
+serde-aux = "3.1.0"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
