using type driven development for validation on user name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ tracing = {version = "0.1", features = ["log"]}
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.6.0"
 serde-aux = "3.1.0"
+unicode-segmentation = "1.9.0"
+claim = "0.5.0"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
