--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tracing-actix-web = "0.6.0"
 serde-aux = "3.1.0"
 unicode-segmentation = "1.9.0"
 claim = "0.5.0"
+validator = "0.16.0"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
